# genie-flow

./: .env.example  .gitignore  Makefile  README.md  ai_simulator.py  config-example.yaml  config.yaml  docker-compose.yaml  fake_database.py  generate_diagram.py  genie_state_machine.py  genieflow.py  main.py  main_worker.py  model.py  prompts.py  pyproject.toml  requirements.txt  setup.py  test-script.txt  test_dialogue.py  work_order.py
ai_state_machine/: __init__.py  app.py  celery.py  celery_tasks.py  containers.py  core.py  environment.py  event_observer.py  genie.py  genie_model.py  genie_state.py  genie_state_machine.py  model.py  registry.py  session.py  session_lock.py  store.py  templates.py
ai_state_machine/containers/: __init__.py  api.py  celery.py  core.py  genieflow.py  invoker.py  persistence.py
ai_state_machine/invoker/: __init__.py  api.py  genie.py  neo4j.py  openai.py  utils.py  verbatim.py  weaviate.py
ai_state_machine/model/: api.py  dialogue.py  enqueable.py  render_job.py  template.py  types.py
ai_state_machine/templates/: __init__.py  jinja.py  verbatim.py
doc/: agent.config.yaml.example  architecture.md  container-architecture.md  index.md  persistence-architecture.md  state-transitions.md
example_claims/: celery_tasks.py  claims.py  generate_diagram.py  model.py  prompts.py
example_claims/templates/: feedback_cannot_extract_role.jinja2  feedback_need_more_information.jinja2  feedback_start_generation.jinja2  feedback_view_categories.jinja2  feedback_view_claims.jinja2  feedback_view_research.jinja2  instruction_initial_information.jinja2  instruction_opening.jinja2  meta.yaml  prompt_extract_categories.jinja2  prompt_extract_categories_base.jinja2  prompt_extract_categories_further_information.jinja2  prompt_extract_categories_product_description.jinja2  prompt_extract_categories_target_persona.jinja2  prompt_extract_categories_user_role.jinja2  prompt_extract_information.jinja2  prompt_extract_user_role.jinja2  prompt_generate_claims.jinja2  prompt_research_base.jinja2  prompt_research_benefits.jinja2  prompt_research_ingredients.jinja2  prompt_research_marketing.jinja2  prompt_research_packaging.jinja2  prompt_research_sensory.jinja2
example_qa/: q_and_a.py  q_and_a_capture.py  q_and_a_cond.py  q_and_a_trans.py
example_qa/templates/: ai_name_extraction.jinja2  ai_response.jinja2  ai_response_summary.jinja2  intro.jinja2  intro_ask_name.jinja2  outro.jinja2  request_for_name_retry.jinja2  user_input.jinja2  welcome.jinja2
example_work_order/: prompts.py  work_order.py
genie_flow/: __init__.py  app.py  celery.py  environment.py  genie.py  session.py  session_lock.py  store.py  utils.py
genie_flow/celery/: __init__.py  compiler.py  progress.py  (+1 more)
tests/: conftest.py  test_progress.py  test_storing.py  test_utils.py
(+10 files in other folders)
