[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
genie_flow = "genie_flow"

[project]
name = "genie_flow"
authors = [
    { name = "Willem van Asperen", email = "willem.van.asperen@paconsulting.com"}
]
description = "Core classes for Genie Flow"
readme = "README.md"
requires-python = "~=3.11.0"
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies=[
    "genie-flow-invoker~=0.6.0.rc1",
    "loguru~=0.7.2",
    "python-statemachine",
    "pydantic~=2.7.1",
    "pydantic-redis==0.5.0",
    "jinja2~=3.1.4",
    "fastapi~=0.111.0",
    "celery~=5.4.0",
    "redis",
    "python-redis-lock~=4.0.0",
    "dependency-injector"
]
dynamic = ["version"]
