[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
genie_flow = "genie_flow"

[project]
name = "genie_flow"
authors = [
    { name = "Willem van Asperen", email = "willem.van.asperen@paconsulting.com"}
]
description = "Core classes for Genie Flow"
readme = "README.md"
requires-python = "~=3.11.0"
classifiers=[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies=[
    "genie-flow-invoker~=0.6.0",
    "loguru~=0.7.2",
    "python-statemachine~=2.3.6",
    "pydantic~=2.9.2",
    "pydantic-redis==0.5.0",
    "jinja2~=3.1.4",
    "fastapi~=0.111.0",
    "celery~=5.4.0",
    "redis~=5.0.8",
    "python-redis-lock~=4.0.0",
    "dependency-injector~=4.42.0",
    "jmespath~=1.0.1",
]
dynamic = ["version"]
